# wt-video-cal

./: .gitignore  AGENTS.md  pyproject.toml  需求描述.md
config/: config.toml
scripts/: clean.sh  run.sh  setup.sh  test.sh
src/wt_video_cal/: __main__.py  aggregator.py  analysis.py  calculator.py  config.py  excel_reader.py  excel_writer.py  exceptions.py  models.py  settings.py
tests/integration/: test_pipeline.py
tests/unit/: test_aggregator.py  test_analysis.py  test_calculator.py  test_config.py  test_excel_reader.py  test_excel_writer.py  test_main.py  test_models.py
